--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "stagas",
   "short": "stagas/scheduler-node",
   "description": "Sample perfect Audioworklet MIDI Scheduler Node",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -56,17 +56,15 @@
     "!**/*.tsbuildinfo"
   ],
   "scripts": {
-    "start:web": "vite-open example/web --https",
-    "start:web:debugging": "vite-open example/web --https --debugging-this",
+    "start:web": "devito example/web",
+    "start:web:debugging": "devito example/web --debugging-this",
     "start:node": "onchange -i src example -- swcno example/node.ts",
     "build:watch": "fastpm autolink && tsc -p tsconfig.dist.json --outDir dist/types --watch & swc -w -C module.type=commonjs ./src -d dist/cjs -w & swc -w -C module.type=es6 ./src -d dist/esm",
     "build:dist": "npm run build:bundle && npm run build:min",
     "cov:watch": "utr --coverage --watch",
     "clean": "rimraf dist",
-    "docs": "dokio -o README.md && dprint fmt README.md",
-    "test": "npm run test:node && npm run test:web",
-    "test:node": "if find test -type f -iregex '.*\\.spec\\.\\(js\\|jsx\\|ts\\|tsx\\)$' | grep -q .; then utr 'test/*.spec.{js,jsx,ts,tsx}'; else echo no node tests; fi",
-    "test:web": "if find test -type f -iregex '.*\\.spec\\.web\\.\\(js\\|jsx\\|ts\\|tsx\\)$' | grep -q .; then utr --browser 'test/*.spec.web.{js,jsx,ts,tsx}'; else echo no web tests; fi",
+    "docs": "dokio -o README.md",
+    "test": "utr",
     "cov": "utr --coverage",
     "build": "npm run build:cjs & npm run build:esm & npm run build:types && echo done.",
     "build:cjs": "swc -C module.type=commonjs ./src -d dist/cjs",
@@ -74,8 +72,8 @@
     "build:types": "tsc -p tsconfig.dist.json --outDir dist/types",
     "build:bundle": "bunzee src/index.ts \"dist/$(cat package.json | jq -r '.name').js\"",
     "build:min": "bunzee -m src/index.ts \"dist/$(cat package.json | jq -r '.name').min.js\"",
-    "lint": "eslint src && dprint check",
-    "lint:fix": "eslint --fix src && dprint fmt",
+    "lint": "eslint src",
+    "lint:fix": "eslint --fix src",
     "prepack": "npm run clean && npm run build && (npm run build:dist || echo unable to bundle)",
     "prepack:dry": "npm pack --dry-run",
     "prepush": "npm run lint && npm run test",
@@ -93,7 +91,9 @@
     "@typescript-eslint/eslint-plugin": "5.31.0",
     "@typescript-eslint/parser": "5.31.0",
     "bunzee": "^1.0.0",
-    "dokio": "^0.0.2",
+    "chokidar": "3.5.3",
+    "devito": "^2.0.0",
+    "dokio": "^1.1.0",
     "dprint": "0.30.3",
     "eslint": "8.20.0",
     "eslint-config-html-jsx": "^1.0.0",
@@ -101,20 +101,19 @@
     "eslint-plugin-react": "7.30.1",
     "husky": "7.0.4",
     "onchange": "7.1.0",
-    "pull-configs": "^0.2.0",
+    "pull-configs": "^1.0.0",
     "rimraf": "3.0.2",
     "swcno": "0.1.1",
     "typescript": "4.7.3",
-    "utr": "^0.2.0",
-    "vite-open": "^3.0.1"
+    "utr": "^1.3.3"
   },
   "dependencies": {
     "alice-bob": "^2.0.0",
-    "event-toolkit": "^1.0.1",
-    "everyday-utils": "^1.0.0",
+    "event-toolkit": "^1.2.0",
+    "everyday-utils": "^1.3.0",
     "immutable-map-set": "^1.0.0",
-    "json-objectify": "^1.0.0",
-    "serialize-whatever": "^1.0.0",
+    "json-objectify": "^1.0.1",
+    "serialize-whatever": "^1.1.0",
     "synced-set": "^1.0.0",
     "webaudio-tools": "^2.0.0"
   }
