--- a/package.json
+++ b/package.json
@@ -110,11 +110,12 @@
   "dependencies": {
     "alice-bob": "^2.0.0",
     "event-toolkit": "^1.3.0",
+    "everyday-types": "^1.1.0",
     "everyday-utils": "^1.6.0",
     "immutable-map-set": "^1.0.0",
     "json-objectify": "^1.0.1",
     "serialize-whatever": "^1.1.0",
     "synced-set": "^1.0.0",
-    "webaudio-tools": "^2.0.1"
+    "webaudio-tools": "^2.1.0"
   }
 }
